force-app/main/default/objects/Apttus_Billing__BillingCustomClasses2__c/Apttus_Billing__BillingCustomClasses2__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to register custom classes that Implement Global interfaces exposed by Apttus for customization.</description>
    <label>Billing Custom Classes</label>
</CustomObject>