force-app/main/default/objects/Apttus_Billing__BillingCustomClasses2__c/fields/Apttus_Billing__EmailCreditMemoAttachmentCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__EmailCreditMemoAttachmentCallbackClass__c</fullName>
    <description>The name of the callback class to provide customized contact list and email template for a given credit memo which will be used to send credit memo attachment via email</description>
    <inlineHelpText>The name of the callback class to provide customized contact list and email template for a given credit memo which will be used to send credit memo attachment via email</inlineHelpText>
    <label>EmailCreditMemoAttachmentCallbackClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>