force-app/main/default/objects/Apttus_Billing__BillingCustomClasses2__c/fields/Apttus_Billing__EmailInvoiceAttachmentCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__EmailInvoiceAttachmentCallbackClass__c</fullName>
    <description>The name of the callback class to provide customized contact list and email template for a given Invoice which will be used to send invoice attachment via email</description>
    <inlineHelpText>The name of the callback class to provide customized contact list and email template for a given Invoice which will be used to send invoice attachment via email</inlineHelpText>
    <label>Email Invoice Attachment Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>