force-app/main/default/objects/Apttus_Billing__BillingCustomClasses2__c/fields/Apttus_Billing__InvoiceFilterCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceFilterCallbackClass__c</fullName>
    <description>The name of the callback class used to implement a custom filter for a given Invoice Run. The custom filter will augment the stock filter used to fetch Billing Schedules when creating a batch of Invoices.</description>
    <inlineHelpText>The name of the callback class used to implement a custom filter for a given Invoice Run. The custom filter will augment the stock filter used to fetch Billing Schedules when creating a batch of Invoices.</inlineHelpText>
    <label>Invoice Filter Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>