force-app/main/default/objects/Apttus_Billing__BillingCustomClasses2__c/fields/Apttus_Billing__InvoiceGroupingCallbackClass__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceGroupingCallbackClass__c</fullName>
    <description>The name of the callback class used to further group Billing Schedules with a particular Invoice.</description>
    <inlineHelpText>The name of the callback class used to further group Billing Schedules with a particular Invoice.</inlineHelpText>
    <label>Invoice Grouping Callback Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>